<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">夢かNow</string>
    <string name="developer_email">mrp1q7z@gmail.com</string>

	<string name="err_dialog_title">エラー報告</string>
	<string name="err_dialog_msg">前回は、エラーで終了してしまい、大変申し訳ありません。今後の改善に役立てますので、開発元にエラーを送っていただけると大変助かります。プライバシーに関する情報は送信されません</string>
	<string name="err_dialog_msg2">大変申し訳ありません。予期せぬエラーが発生しました。今後の改善に役立てますので、開発元にエラーを送っていただけると大変助かります。プライバシーに関する情報は送信されません</string>

	<string name="donation_msg">ありがとうございます。\n\nこのアプリケーションが皆様のお役に立ちましたでしょうか？\n\n役立った、良かったと言っていただける方で、寄付してもいいよという寛大な方、ご協力をお願いできましたら、たいへんうれしく思います。\n\n※この寄付は将来の何かを期待しての寄付ではありません。現時点までの価値に対する寄付です。つまり、この寄付によって義務も権利も生じません。利用者は寄付する義務はありませんし、寄付しなかったからといって利用が制限されることもありません。寄付をすることで要望を聞いてもらえる権利も発生しません。また、開発者は寄付を頂くことで要望に応えたりする義務もありません。</string>
    <string name="donation">寄付する</string>
	<string name="donation_thank_you">ご寄付いただき、心より感謝いたします。ありがとうございました。</string>
		
    <string name="defaultDispInterval">60</string>
    <string name="defaultGoalCnt">1440</string>
    <string name="use_this_card">このカードを使う</string>
    <string name="edit">編集</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="back_image_description">背景画像</string>
    <string name="back_image">背景画像</string>
    <string name="add">追加</string>
    <string name="del">削除</string>
    <string name="affirmation_text">アファーメーションの言葉</string>
    <string name="text_color">文字の色</string>
    <string name="text_color_comment">文字の色はプレビュー画面で文字をタップすることによっても変更できます</string>
    <string name="shadow_color">文字の影</string>
    <string name="shadow_color_comment">文字の影はプレビュー画面で文字をタップすることによっても変更できます</string>
    <string name="text_size">文字の大きさ</string>
    <string name="text_size_comment">文字の大きさはプレビュー画面で文字をピンチイン／ピンチアウトすることによっても変更できます</string>
    <string name="text_position">文字の位置</string>
    <string name="text_position_comment">文字の位置はプレビュー画面で文字を長押してドラッグすることによっても変更できます</string>
    <string name="margin_top">上マージン</string>
    <string name="margin_left">左マージン</string>
    <string name="preview">プレビュー</string>
    <string name="kome">※</string>
    <string name="left_arrow">＜</string>
    <string name="right_arrow">＞</string>
    <string name="affirmation_text_hint">ここにアファーメーションの言葉を入力してください</string>
    <string name="start">開始</string>
    <string name="wake_up_msg">おはようございます。\n指定の時間になりました。\n今日も一日よろしくお願いします。</string>
    <string name="sleep_comment">おやすみなさい。\nスリープ時間を設定してください</string>
    <string name="sleep_time">【時間】\n指定の時間に起動します\n例 6:30 → 6時30分に起動</string>
    <string name="sleep_timer">【タイマー】\n指定の時間経過後に起動します\n例 0:15 → 15分後に起動</string>
    <string name="set">セット</string>
    <string name="divider_description">---</string>
    <string name="color_dialog_title">色の設定</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
	<string name="del_confirm_msg">削除します。よろしいですか？</string>
    <string name="confirm">確認	</string>
	<string name="backimg_del_confirm_msg">背景画像を削除します。よろしいですか？</string>
    <string name="send">送信</string>
	<string name="error">エラー</string>
	<string name="file_not_found">画像ファイルが見つかりません</string>
	<string name="oops">Oops!</string>
	<string name="not_del_msg">このカードは現在使用中のため削除できません</string>
	<string name="enter_affirmation_words">アファーメーションの言葉を入力してください</string>
	<string name="tab_title1">カード</string>
	<string name="tab_title2">情報</string>
	<string name="tab_title3">スリープ</string>
	<string name="vibrator_on">オン</string>
	<string name="vibrator_off">OFF</string>
	<string name="now_setting">現在値：</string>
	<string name="silent">サイレント</string>
	<string name="make_card_msg">カードを作成してください</string>
	<string name="select_card_msg">カードを選択してください</string>
	<string name="timer_not_set">タイマーは設定されていません</string>
	<string name="timer_setting_at">に設定中</string>
	<string name="good_night">おやすみなさい</string>
	<string name="ec_start">スタート</string>
	<string name="ec_konochousi">この調子</string>
	<string name="ec_ganbatte">がんばって</string>
	<string name="ec_atosukosi">あと少し</string>
	<string name="ec_akirameruna">あきらめるな</string>
	<string name="ec_syosikantetu">初志貫徹</string>
	<string name="ec_yatta">やったー！</string>
	<string name="ec_daijoubu">大丈夫</string>
	<string name="ec_dekiruyo">できるよ</string>
	<string name="ec_kanauyo">叶うよ</string>
	<string name="ec_tudukeyou">続けよう</string>
	<string name="ec_yaruzo">やるぞ</string>
	<string name="ec_iizo">いいぞ</string>
</resources>