<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/kome"
                    android:src="@android:drawable/ic_menu_info_details" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/back_image" />

                <Button
                    android:id="@+id/addBackImgButton"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <Gallery
                    android:id="@+id/backImgGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spacing="0px" >
                </Gallery>

                <ImageSwitcher
                    android:id="@+id/backImgSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" >
                </ImageSwitcher>

                <Button
                    android:id="@+id/delBackImgButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/del" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:gravity="center_vertical"
                android:text="@string/affirmation_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/affirmationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/affirmation_text_hint"
                    android:maxLines="5"
                    android:minLines="5" >
                </EditText>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:gravity="center_vertical"
                android:text="@string/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/text_color_comment" />

                <TextView
                    android:id="@+id/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/textColor"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/text_color"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:gravity="center_vertical"
                android:text="@string/shadow_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/shadow_color_comment" />

                <TextView
                    android:id="@+id/shadowColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/shadowColor"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/shadow_color" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:gravity="center_vertical"
                android:text="@string/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/text_size_comment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5sp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/text_size" />

                    <TextView
                        android:id="@+id/textSize"
                        android:layout_width="30sp"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/textSizeBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="40"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:progress="10" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:gravity="center_vertical"
                android:text="@string/text_position" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/waku"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/text_position_comment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5sp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/margin_top" />

                    <TextView
                        android:id="@+id/marginTop"
                        android:layout_width="30sp"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/marginTopBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="500"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:progress="50" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5sp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:text="@string/margin_left" />

                    <TextView
                        android:id="@+id/marginLeft"
                        android:layout_width="30sp"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/marginLeftBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="300"
                    android:paddingLeft="5sp"
                    android:paddingRight="5sp"
                    android:progress="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp" >

                <Button
                    android:id="@+id/previewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/preview" />

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ok" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>