<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:padding="10sp"
            android:text="@string/sleep_comment" />

        <RadioGroup
            android:id="@+id/timeKind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/waku" >

            <RadioButton
                android:id="@+id/jikan"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sleep_time" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider_description"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="8dp"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_dark" />

            <RadioButton
                android:id="@+id/timer"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer" />
        </RadioGroup>

        <TimePicker
            android:id="@+id/wakeUpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setTimerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set" />
    </LinearLayout>

</LinearLayout>