<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/affirmationBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_image_description" />

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/affirmationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dip" >

        <ImageButton
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#33000000"
            android:contentDescription="@string/ok"
            android:src="@drawable/ic_menu_mark" />

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#33000000"
            android:contentDescription="@string/cancel"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

</RelativeLayout>